--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,10 @@
   text-align: center;
 }
 
-.menu, .quiz{
+.menu, .quiz, .score{
   width: 500px;
   height: 500px;
-  background-color: aquamarine;
+  background-color: lightblue;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -17,7 +17,13 @@
   align-items: center;
 }
 
-.menu button, .quiz button{
+button:active{
+  background:  orange;
+  color: #fff;
+}
+
+
+.menu button, .quiz button, .score button{
   width: 300px;
   height: 50px;
   margin: 5px;
@@ -25,44 +31,4 @@
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
-}
-
-button :active{
-  background: orange;
-  color: white;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
